kubernetes/apps/observability/victoria-logs/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-logs-canonical
  annotations:
    gatus.home-operations.com/endpoint: |
      name: victoria-logs
      group: observability
spec:
  hostnames:
    - victoria-logs.jptr.zebernst.dev
  parentRefs:
    - name: tailscale
      namespace: kube-system
      sectionName: https-canon
  rules:
    - backendRefs:
        - name: victoria-logs-server
          port: 9428
